헤더 충돌 수정

--- a/beautyChuSpring/src/main/webapp/view/yun-womanstylethumbnail.html
+++ b/beautyChuSpring/src/main/webapp/view/yun-womanstylethumbnail.html
@@ -4,9 +4,20 @@
 <meta charset="UTF-8">
 <title>Beauty Chu~♥</title>
 
-<link rel="shortcut icon" href="../images/favicon.ico"
-	type="image/x-icon">
+
+<!-- 마페 -->
+
+<link rel="shortcut icon" href="../images/favicon.ico" type="image/x-icon">
 <link rel="icon" href="../images/favicon.ico" type="image/x-icon">
+
+<link rel="stylesheet" type="text/css" href="../css/basic.css"/>
+
+<script type="text/javascript" src="../js/modernizr.min.js"></script>
+<script type="text/javascript" src="../js/jquery.easing.js"></script>
+<script type="text/javascript" src="../js/jquery-scrolltofixed-min.js"></script>
+<script type="text/javascript" src='../js/handlebars-v2.0.0.js'></script>
+
+<!-- 마페 -->
 <link rel="stylesheet" href="../css/resources/starrr.css">
 <link rel="stylesheet"
 	href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.2.0/css/font-awesome.min.css">
@@ -22,18 +33,12 @@
 
 
 <!-- 썸네일 이미지 -->	
-
-	<link rel="stylesheet" type="text/css" href="../css/thumnail.css" />
+<!-- 헤더랑 충돌중	<link rel="stylesheet" type="text/css" href="../css/thumnail.css" /> --> 
 	<link rel="stylesheet" type="text/css" href="../css/shop.css" />
 
  <!-- 공통 스크립트 -->
-<!-- <script type="text/javascript" src="../js/modernizr.min.js"></script> -->
 <script  src="http://code.jquery.com/jquery-latest.min.js"></script>
-<!-- <script type="text/javascript" src="../js/jquery.easing.js"></script> -->
-<!-- <script type="text/javascript" src="../js/jquery-scrolltofixed-min.js"></script> -->
 <script type="text/javascript" src="../js/common.js"></script>
-<!-- <script type="text/javascript" src="../js/motion.js"></script>  -->
-<!-- <script type="text/javascript" src="../js/jquery.motio.min.js"></script>  -->
 
 
 	<script>
@@ -41,19 +46,9 @@
 	</script>
 		
 <!-- 	page가 home일 경우에만 로드하는 js -->
-<!--  	<script type="text/javascript" src="../js/jquery.touchSwipe.min.js"></script> -->
-<!-- 	<script type="text/javascript" src="../js/jquery.event.drag-2.2.js"></script> -->
-<!-- 	<script type="text/javascript" src="../js/jquery.event.drag.live-2.2.js"></script> -->
-<!-- 	<script type="text/javascript" src="../js/home.js"></script> -->
-<!-- 	<script type="text/javascript" src="../js/home.show-window.js"></script> -->
 <!-- 공통 스크립트 -->
 
 
-<script type="text/javascript" src='../js/handlebars-v2.0.0.js'></script>
-
-
-
-<!--     <script type="text/javascript" src="../js/resources/jquery-1.9.1.min.js"></script> -->
     <script type="text/javascript" src="../js/resources/kh/jssor.js"></script> 
     <script type="text/javascript" src="../js/resources/kh/jssor.slider.js"></script> 
 
@@ -62,9 +57,6 @@
 	<script type="text/javascript" src="../js/shop.js"></script>
 
 <style type="text/css">
-
-
-
 
 
 /* 스타일 적용 공간! */
@@ -495,6 +487,7 @@ border-radius: 20px;
 
 </head>
 <body class="home">
+<div style="background-color: white;">
 
 	<header>
 		<!-- header 건들지 말긔! -->
@@ -1046,7 +1039,7 @@ border-radius: 20px;
 			    });
 	 	}
 	</script>
-
+</div>
 </body>
 </html>
 
