--- a/beautyChuSpring/src/main/webapp/view/yun-womanstylethumbnail.html
+++ b/beautyChuSpring/src/main/webapp/view/yun-womanstylethumbnail.html
@@ -1003,7 +1003,7 @@ border-radius: 20px;
  								      $.get('templates/style-table.html', function(source){
  									    	  var template = Handlebars.compile(source);
  									    	  var html = template(data);
- 									    	  /* console.log(html); */
+ 									    	  console.log(html);
  									    	  $('.yun-container').html(html);
  									    	});  
  								    });
