--- a/beautyChuSpring/src/main/webapp/view/templates/style-table.html
+++ b/beautyChuSpring/src/main/webapp/view/templates/style-table.html
@@ -1,7 +1,7 @@
 
 					{{#each styleList}}
  			<div class="yun-box" data-no="{{styleNo}}">
- 				<img class="yun-boximage" src={{stylePhotoUrl}}>
+ 				<img class="yun-boximage" src="../fileupload/{{stylePhotoUrl}}">
  					<div class="kh-basic">
 						<h2>{{styleName}}</h2>
 						<div class="starrr"></div>
