--- a/beautyChuSpring/src/main/webapp/view/templates/main-style-list.html
+++ b/beautyChuSpring/src/main/webapp/view/templates/main-style-list.html
@@ -2,7 +2,7 @@
 <div class="good">
 	<div class="img-container">
 		<a href='#'>
-			<img src="{{stylePhotoUrl}}" alt="Crew Neck Sweater "><span class="over"><i></i></span>
+			<img src="../fileupload/{{stylePhotoUrl}}" alt="Crew Neck Sweater "><span class="over"><i></i></span>
 		</a>
 	</div>
 	<a href='#' class="good-name">
