--- a/beautyChuSpring/src/main/webapp/view/templates/main-celebrity-list.html
+++ b/beautyChuSpring/src/main/webapp/view/templates/main-celebrity-list.html
@@ -2,7 +2,7 @@
 <li>
 	<div class="good">
 		<div class="img-container">
-			<a href='#'><img src="{{stylePhotoUrl}}" alt="{{styleName}}"><span class="over"><i></i></span></a>
+			<a href='#'><img src="../fileupload/{{stylePhotoUrl}}" alt="{{styleName}}"><span class="over"><i></i></span></a>
 		</div>
 		<a href='#' class="good-brand">{{styleName}}</a>
 		<a href='#'	class="good-name">[{{genre}}] {{genreTitle}}</a>
