--- a/beautyChuSpring/src/main/webapp/view/common/footer.html
+++ b/beautyChuSpring/src/main/webapp/view/common/footer.html
@@ -6,8 +6,8 @@
             <div class="inner">
               <h2>ABOUT</h2>
               <ul>
-                <li class="m1"><a href="#">Q &amp; A</a></li>
-                <li class="m2"><a href="#">Admin</a></li>
+                <li class="m1"><a href="../jy_qna.html">Q &amp; A</a></li>
+                <li class="m2"><a href="http://192.168.0.13:8080/beautyChuSpring_K/view/admin/coupon.html">Admin</a></li>
                 <li class="m3"><a href="#">Mobile version</a></li>
               </ul>
             </div>
