김기현 머지 저주할거야

--- a/beautyChuSpring/src/main/webapp/view/common/footer.html
+++ b/beautyChuSpring/src/main/webapp/view/common/footer.html
@@ -1,5 +1,5 @@
 <div class="inner">
-        <!-- upside -->
+        <!-- upsideeee -->
         <div class="upside">
           <!-- about -->
           <div class="the-beautychu widget">
