쿠폰 alert css js 스타일 부분 수정 예정

--- a/beautyChuSpring/src/main/webapp/view/kh-shopinfo.html
+++ b/beautyChuSpring/src/main/webapp/view/kh-shopinfo.html
@@ -10,6 +10,14 @@
 
 <link rel="stylesheet" type="text/css" href="../css/basic.css"/>
 
+
+<!-- 쿠폰 알림 css -->
+<link rel="stylesheet" type="text/css" href="../css/resources/coupon/default.css" />
+<link rel="stylesheet" type="text/css" href="../css/resources/coupon/component.css" />
+<script src="../js/resources/coupon/modernizr.custom.js"></script>
+
+
+
 <script type="text/javascript" src="../js/modernizr.min.js"></script>
 <script type="text/javascript" src="../js/jquery.easing.js"></script>
 <script type="text/javascript" src="../js/jquery-scrolltofixed-min.js"></script>
@@ -485,7 +493,7 @@ kh-shopListName{
 
 
 	<div id="wrap-chu" class="wrap-chu">
-	<DIV style="text-align:center;font-size:50px; height:50px; border-bottom: 2px black solid; padding: 20px; margin-bottom: 20px;width: 1127px;">SHOP</DIV>
+	<DIV style="text-align:center;font-size:50px; height: 90px; border-bottom: 2px black solid; padding: 20px; margin-bottom: 27px;width: 1160px;color:black;">SHOP</DIV>
 		<div class="yun-container">
 		
 		<!-- 샵 테이블 삽입부 -->
