--- a/beautyChuSpring/src/main/webapp/view/admin/shop_info.html
+++ b/beautyChuSpring/src/main/webapp/view/admin/shop_info.html
@@ -17,13 +17,7 @@
     <!-- Custom styles for this template -->
     <link href="assets/css/style.css" rel="stylesheet">
     <link href="assets/css/style-responsive.css" rel="stylesheet">
-    <link rel="stylesheet" href="assets/css/to-do.css">
 
-    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-      <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
   </head>
 
   <body>
@@ -40,147 +34,6 @@
             <!--logo start-->
             <a href="coupon.html#" class="logo"><b>Beauty_Chu Admin</b></a>
             <!--logo end-->
-            <div class="nav notify-row" id="top_menu">
-                <!--  notification start -->
-                <ul class="nav top-menu">
-                    <!-- settings start -->
-                    <li class="dropdown">
-                        <a data-toggle="dropdown" class="dropdown-toggle" href="#">
-                            <i class="fa fa-tasks"></i>
-                            <span class="badge bg-theme">4</span>
-                        </a>
-                        <ul class="dropdown-menu extended tasks-bar">
-                            <div class="notify-arrow notify-arrow-green"></div>
-                            <li>
-                                <p class="green">You have 4 pending tasks</p>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    <div class="task-info">
-                                        <div class="desc">Beauty_Chu Admin Panel</div>
-                                        <div class="percent">40%</div>
-                                    </div>
-                                    <div class="progress progress-striped">
-                                        <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 40%">
-                                            <span class="sr-only">40% Complete (success)</span>
-                                        </div>
-                                    </div>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    <div class="task-info">
-                                        <div class="desc">Database Update</div>
-                                        <div class="percent">60%</div>
-                                    </div>
-                                    <div class="progress progress-striped">
-                                        <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%">
-                                            <span class="sr-only">60% Complete (warning)</span>
-                                        </div>
-                                    </div>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    <div class="task-info">
-                                        <div class="desc">Product Development</div>
-                                        <div class="percent">80%</div>
-                                    </div>
-                                    <div class="progress progress-striped">
-                                        <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%">
-                                            <span class="sr-only">80% Complete</span>
-                                        </div>
-                                    </div>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    <div class="task-info">
-                                        <div class="desc">Payments Sent</div>
-                                        <div class="percent">70%</div>
-                                    </div>
-                                    <div class="progress progress-striped">
-                                        <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width: 70%">
-                                            <span class="sr-only">70% Complete (Important)</span>
-                                        </div>
-                                    </div>
-                                </a>
-                            </li>
-                            <li class="external">
-                                <a href="#">See All Tasks</a>
-                            </li>
-                        </ul>
-                    </li>
-                    <!-- settings end -->
-                    
-                    <!-- inbox dropdown start-->
-                    <li id="header_inbox_bar" class="dropdown">
-                        <a data-toggle="dropdown" class="dropdown-toggle" href="#">
-                            <i class="fa fa-envelope-o"></i>
-                            <span class="badge bg-theme">5</span>
-                        </a>
-                        <ul class="dropdown-menu extended inbox">
-                            <div class="notify-arrow notify-arrow-green"></div>
-                            <li>
-                                <p class="green">You have 5 new messages</p>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    <span class="photo"><img alt="avatar" src="assets/img/ui-zac.jpg"></span>
-                                    <span class="subject">
-                                    <span class="from">Zac Snider</span>
-                                    <span class="time">Just now</span>
-                                    </span>
-                                    <span class="message">
-                                        Hi mate, how is everything?
-                                    </span>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    <span class="photo"><img alt="avatar" src="assets/img/ui-divya.jpg"></span>
-                                    <span class="subject">
-                                    <span class="from">Divya Manian</span>
-                                    <span class="time">40 mins.</span>
-                                    </span>
-                                    <span class="message">
-                                     Hi, I need your help with this.
-                                    </span>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    <span class="photo"><img alt="avatar" src="assets/img/ui-danro.jpg"></span>
-                                    <span class="subject">
-                                    <span class="from">Dan Rogers</span>
-                                    <span class="time">2 hrs.</span>
-                                    </span>
-                                    <span class="message">
-                                        Love your new Dashboard.
-                                    </span>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    <span class="photo"><img alt="avatar" src="assets/img/ui-sherman.jpg"></span>
-                                    <span class="subject">
-                                    <span class="from">Dj Sherman</span>
-                                    <span class="time">4 hrs.</span>
-                                    </span>
-                                    <span class="message">
-                                        Please, answer asap.
-                                    </span>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">See all messages</a>
-                            </li>
-                        </ul>
-                    </li>
-                    <!-- inbox dropdown end -->
-                </ul>
-                <!--  notification end -->
-            </div>
             <div class="top-menu">
             	<ul class="nav pull-right top-menu">
                     <li><a class="logout" href="login.html">Logout</a></li>
@@ -198,10 +51,10 @@
               <!-- sidebar menu start-->
               <ul class="sidebar-menu" id="nav-accordion">
               
-              	  <p class="centered"><a href="shop_info.html#"><img src="assets/img/ui-zac.jpg" class="img-circle" width="60"></a></p>
-              	  <h5 class="centered">박준 뷰티랩</h5>
-              	  <h6 class="centered">서울시 강남구 삼성로 725</h6>
-              	  <h6 class="centered">02-511-1414</h6>
+              	  <p class="centered"><a href="shop_info.html#"><img class="img-circle" width="60"></a></p>
+              	  <h5 id="sidebar-shopName" class="centered"></h5>
+              	  <h6 id="sidebar-shopAddr" class="centered"></h6>
+              	  <h6 id="sidebar-shopTel" class="centered"></h6>
               	  	
                   <li class="mt sub-menu">
                       <a href="javascript:;" >
@@ -216,15 +69,15 @@
                   <li class="sub-menu">
                       <a href="javascript:;" >
                           <i class="fa fa-edit"></i>
-                          <span>Style</span>
+                          <span>Woman Style</span>
                       </a>
                       <ul class="sub">
-                          <li><a href="style_addStyle.html">Add Style</a></li>
-                          <li><a  href="style_cut.html">Cut</a></li>
-                          <li><a  href="style_perm.html#">Perm</a></li>
-                          <li><a  href="style_color.html#">Color</a></li>
-                          <li><a  href="style_care.html#">Care</a></li>
-                          <li><a  href="style_etc.html#">ETC</a></li>
+                          <li><a href="style_addStyle.html">Add Woman Style</a></li>
+                          <li><a  href="style_cut.html">Woman Cut</a></li>
+                          <li><a  href="style_perm.html#">Woman Perm</a></li>
+                          <li><a  href="style_color.html#">Woman Color</a></li>
+                          <li><a  href="style_care.html#">Woman Care</a></li>
+                          <li><a  href="style_etc.html#">Woman ETC</a></li>
                       </ul>
                   </li>
 
@@ -261,7 +114,7 @@
       <!--main content start-->
       <section id="main-content">
           <section class="wrapper">
-          	<h3><i class="fa fa-angle-right"></i> Shop</h3>
+          	<h3><i class="fa fa-angle-right"></i> Shop Info</h3>
           	
           	<!-- BASIC FORM ELELEMNTS -->
           	<div class="row mt">
@@ -388,7 +241,7 @@ var imsiEmail;
 				console.log("login 정보" + data.status);
 				console.log(data.loginUser);
 				$('#email').val(data.loginUser.email);
-				alert(data.loginUser.email + "정보가져옴");
+				console.log(data.loginUser.email + "정보가져옴");
 				imsiEmail = data.loginUser.email;
 			},
 			error : function() {
@@ -402,11 +255,16 @@ var imsiEmail;
 				data : {
 					email : imsiEmail
 				},
-				url : '../../json/shop/list.do',
+				url : '../../json/shopInfo/list.do',
 				success : function(data) {
 					console.log(imsiEmail);
 					console.log(data.listShopInfo);
 					console.log(data.listShopInfo[0].shopPhotoUrl);
+					
+					$('#sidebar-shopPhoto').attr('src', '/beautyChuSpring_K/fileupload' + data.listShopInfo[0].shopPhotoUrl);
+					$('#sidebar-shopName').text(data.listShopInfo[0].shopName);
+					$('#sidebar-shopAddr').text(data.listShopInfo[0].shopAddr);
+					$('#sidebar-shopTel').text(data.listShopInfo[0].shopTel);
 					
 					$('#shopProfile').attr('src','/beautyChuSpring_K/fileupload' + data.listShopInfo[0].shopPhotoUrl);
 					$('#licenseeNo').val(data.listShopInfo[0].licenseeNo);
@@ -423,19 +281,18 @@ var imsiEmail;
 	    
 	    /* AJAX 서버로 데이터 보내서 update */
 		$('#shop-updateBtn').click(function() {
-			/* var profileInput = document.getElementById("profileInput").files[0].name;
+			var profileInput = document.getElementById("profileInput").files[0].name;
 			var photo1 = profileInput[0];
-			var shopPhotoName = profileInput[0].name; */
+			var shopPhotoName = profileInput[0].name;
 			console.log(profileInput);
 
 			$("form").ajaxSubmit({
 				dataType : "json",
-				url : '../../json/shop/fileUpload.do',
+				url : '../../json/shopInfo/fileUpload.do',
 				data : {email : imsiEmail},
 				success : function(data) {
 					console.log(data);
 					console.log(data.result);
-					alert("파일 보내짐");
 				},
 				error : function(error) {
 					alert("요청 처리 중 오류가 발생하였습니다.");
@@ -445,9 +302,9 @@ var imsiEmail;
 			$.ajax({
 				type : 'post',
 				dataType : "json",
-				url : '../../json/shop/update.do',
+				url : '../../json/shopInfo/update.do',
 				data : {
-					/* shopPhotoUrl : $ */ 
+					shopPhotoUrl : $('#shopProfile').attr('src'),
 					email : $('#email').val(),
 					licenseeNo : $('#licenseeNo').val(),
 					shopName : $('#shopName').val(),
